--- a/ui/ui-textarea/ui-textarea.css
+++ b/ui/ui-textarea/ui-textarea.css
@@ -1,75 +1,62 @@
 ui-textarea{
   position:relative;
   display:block;
-  border:none;
-  outline-offset:0px;
-  outline-width:-1px;
+  outline-width:2px;
+  outline-offset:2px;
   outline-style:solid;
   outline-color:transparent;
-  color:var(--ui-textarea-color);
-  background-color:var(--ui-textarea-background-color);
-  font-size:var(--ui-font-size-medium);
-  overflow: hidden;}
+  background-color:var(--ui-textarea-background-color);}
 
 ui-textarea[ui]{
   transition-duration:var(--ui-transition-duration);
-  transition-property:background-color,outline-color,color;}
-
-ui-textarea[disabled]{
-  outline-color:var(--ui-color-form-control-outline-disabled);
-  background-color:var(--ui-color-form-control-surface-disabled);}
+  transition-property:outline-color;}
 
 ui-textarea::before{
   position:absolute;
-  bottom:0;
-  display:block;  
   content:'';
-  width:100%;
-  height:100%;
-  border-top:1px solid #ccc;
-  border-left:1px solid #ccc;
-  border-right:1px solid #ccc;
-  border-bottom:2px solid #ccc;
+  inset:0;
+  border-radius:inherit;
+  border-width:1px;
+  border-style:solid;
+  border-color:var(--ui-textarea-border-color);
   pointer-events:none;}
 
 ui-textarea textarea{
   direction:inherit;
   border:none;
   outline:none;
-  padding:12px 16px;
+  padding:var(--ui-textarea-padding);
   resize:none;
-  font-size:inherit;
-  color:inherit;
+  font-size:var(--ui-textarea-font-size);
+  color:var(--ui-textarea-font-color);
   background-color:transparent;}
 
-ui-textarea[disabled] textarea{
-  color:var(--ui-color-form-control-content-disabled);}
-
 ui-textarea textarea::placeholder{
-  color:var(--ui-color-input-placeholder);}
-
-ui-textarea[disabled] textarea::placeholder{
-  color:var(--ui-color-form-control-content-disabled);}
+  color:var(--ui-textarea-placeholder-font-color);}
 
 @media (hover:hover){
-  ui-textarea:hover:not([disabled]):not([status]){
-    outline-color:var(--ui-textarea-outline-focus);
-    color:var(--ui-textarea-color-hover);}
+  ui-textarea:hover:not([disabled]){
+    outline-color:var(--ui-textarea-outline-color);}
 }
 
-ui-textarea:focus-within:not([disabled]):not([status]){
-  outline-color:var(--ui-textarea-outline-focus);}
+ui-textarea:focus-within:not([disabled]){
+  outline-color:var(--ui-textarea-outline-color);}
 
 /* color */
 ui-textarea[color="default"]{
   --ui-textarea-background-color:var(--ui-color-gray-800);
-  --ui-textarea-color:var(--ui-color-gray-150);
-  --ui-textarea-color-hover:var(--ui-color-white);
-  --ui-textarea-outline:var(--ui-color-gray-600);
-  --ui-textarea-outline-focus:var(--ui-color-gray-400);
-  --ui-textarea-outline-active:var(--ui-color-gray-400);}
+  --ui-textarea-border-color:var(--ui-color-gray-500);
+  --ui-textarea-font-color:var(--ui-color-white);
+  --ui-textarea-placeholder-font-color:var(--ui-color-gray-400);
+  --ui-textarea-outline-color:var(--ui-color-gray-500);}
 
-ui-textarea[status="accent"]{outline-color:var(--ui-color-form-control-accent);}
-ui-textarea[status="error"]{outline-color:var(--ui-color-form-control-error);}
-ui-textarea[status="success"]{outline-color:var(--ui-color-form-control-success);}
-ui-textarea[status="warning"]{outline-color:var(--ui-color-form-control-warning);}
+/* size */
+ui-textarea[size="default"]{
+  --ui-textarea-font-size:14px;
+  --ui-textarea-min-height:100px;
+  --ui-textarea-padding:10px 12px;}
+
+ui-textarea[status="accent"]::before{border-color:var(--ui-color-blue-500);}
+ui-textarea[status="error"]::before{border-color:var(--ui-color-red-500);}
+ui-textarea[status="success"]::before{border-color:var(--ui-color-green-500);}
+ui-textarea[status="warning"]::before{border-color:var(--ui-color-yellow-500);}
