--- a/theme/theme.css
+++ b/theme/theme.css
@@ -32,7 +32,8 @@ body{
   overflow-y:scroll;}
 
 ::-webkit-scrollbar{
-  width:8px;}
+  width:8px;
+  height:8px;}
 
 ::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-track{
