--- a/ui/ui-listbox/ui-listbox.css
+++ b/ui/ui-listbox/ui-listbox.css
@@ -7,7 +7,8 @@ ui-listbox{
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
-  background-color:rgb(30,30,30);
+  color:var(--ui-listbox-font-color);
+  background-color:var(--ui-listbox-background-color);
   z-index:9999;}
 
 ui-listbox[hidden]{
@@ -18,6 +19,9 @@ ui-listbox [role="option"]{
   border-radius:inherit;
   font-size:var(--ui-listbox-font-size);
   padding:8px 8px;
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
   cursor:pointer;}
 
 ui-listbox[ui] [role="option"]{
@@ -26,20 +30,19 @@ ui-listbox[ui] [role="option"]{
 
 @media (hover:hover){
   ui-listbox[ui] [role="option"]:hover:not([disabled]){
-    background-color:rgb(40,40,40);
+    background-color:var(--ui-listbox-option-background-color-hover);
     color:var(--ui-listbox-font-color-hover);}
 }
 
 ui-listbox[ui] [role="option"][aria-selected="true"]{
-  background-color:rgb(30,30,30);
+  background-color:var(--ui-listbox-option-background-color-selected);
   color:var(--ui-listbox-font-color-hover);}
-
-/* select listbox */
-ui-listbox[type="select"]{
-  color:var(--ui-listbox-font-color);}
 
 /* color */
 ui-listbox[color="default"]{
+  --ui-listbox-background-color:var(--ui-color-gray-800);
+  --ui-listbox-option-background-color-hover:var(--ui-color-gray-650);
+  --ui-listbox-option-background-color-selected:var(--ui-color-gray-700);
   --ui-listbox-font-color:var(--ui-color-gray-150);
   --ui-listbox-font-color-hover:var(--ui-color-white);}
 
