--- a/ui/ui-select/ui-select.css
+++ b/ui/ui-select/ui-select.css
@@ -11,8 +11,9 @@ ui-select{
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
-  color:var(--ui-color-white);
+  color:var(--ui-select-font-color);
   background-color:var(--ui-select-background-color);
+  overflow:hidden;
   cursor:pointer;}
 
 ui-select[ui]{
@@ -33,18 +34,22 @@ ui-select:focus-visible:not([disabled]){
 
 ui-select > span{
   flex-grow:1;
-  font-size:var(--ui-select-font-size);}
+  font-size:var(--ui-select-font-size);
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;}
 
 ui-select > ui-icon{
-  width:18px;}
+  width:20px;}
 
 /* color */
 ui-select[color="default"]{
   --ui-select-background-color:var(--ui-color-gray-800);
   --ui-select-background-color-hover:var(--ui-color-gray-750);
   --ui-select-background-color-active:var(--ui-color-gray-700);
-  --ui-select-font-color-:var(--ui-color-gray-150);
-  --ui-select-font-color-hover:var(--ui-color-white);
+
+  --ui-select-font-color:var(--ui-color-white);
+
   --ui-select-outline-color:var(--ui-color-gray-500);}
 
 /* size */
