--- a/ui/ui-button/ui-button.css
+++ b/ui/ui-button/ui-button.css
@@ -29,10 +29,10 @@ ui-button > ui-icon{
   height:var(--ui-button-icon-size);
   width:var(--ui-button-icon-size);}
 
-ui-button > ui-icon:first-child{
+ui-button > ui-icon:not(:only-child):first-child{
   margin-inline-start:-2px;}
 
-ui-button > ui-icon:last-child{
+ui-button > ui-icon:not(:only-child):last-child{
   margin-inline-end:-2px;}
 
 ui-button > ui-spinner{
@@ -42,7 +42,7 @@ ui-button > ui-spinner{
   justify-content:center;
   border-radius:inherit;
   inset:0;
-  background-color:var(--ui-button-loader-background-color);}
+  background-color:var(--ui-button-background-color-active);}
 
 ui-button > ui-spinner > svg{
   height:var(--ui-button-loader-icon-size);
@@ -69,9 +69,10 @@ ui-button[aspect-ratio="1/1"]{
 /* color */
 ui-button[color="default"]{
   --ui-button-background-color:var(--ui-color-gray-800);
-  --ui-button-loader-background-color:var(--ui-color-gray-800);
   --ui-button-background-color-hover:var(--ui-color-gray-750);
   --ui-button-background-color-active:var(--ui-color-gray-700);
+  --ui-button-loader-background-color:var(--ui-color-gray-800);
+
   --ui-button-font-color:var(--ui-color-gray-150);
   --ui-button-font-color-hover:var(--ui-color-white);
   --ui-button-outline-color:var(--ui-color-gray-500);}
