--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -1,3 +1,4 @@
+@import './ui-accordion/ui-accordion.css';
 @import './ui-button/ui-button.css';
 @import './ui-checkbox/ui-checkbox.css';
 @import './ui-divider/ui-divider.css';
@@ -5,15 +6,14 @@
 @import './ui-focus/ui-focus.css';
 @import './ui-icon/ui-icon.css';
 @import './ui-input/ui-input.css';
+@import './ui-label/ui-label.css';
+@import './ui-listbox/ui-listbox.css';
+@import './ui-portal/ui-portal.css';
+@import './ui-select/ui-select.css';
 @import './ui-spinner/ui-spinner.css';
 @import './ui-switch/ui-switch.css';
 @import './ui-text/ui-text.css';
 @import './ui-textarea/ui-textarea.css';
-@import './ui-label/ui-label.css';
-@import './ui-select/ui-select.css';
-@import './ui-listbox/ui-listbox.css';
-
-
 
 :root{
   /* line height */
