--- a/ui/ui-accordion/ui-accordion.css
+++ b/ui/ui-accordion/ui-accordion.css
@@ -1,88 +1,76 @@
-ui-button{
+ui-accordion{
   position:relative;
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  vertical-align:middle;
-  border:none;
-  height:var(--ui-button-height);
-  padding-inline-start:var(--ui-button-padding-inline);
-  padding-inline-end:var(--ui-button-padding-inline);
-  column-gap:var(--ui-button-column-gap);
-  font-size:var(--ui-button-font-size);
-  color:var(--ui-button-font-color);
-  background-color:var(--ui-button-background-color);
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  row-gap:var(--ui-accordion-row-gap);}
+
+ui-accordion > :where([data-ui]),
+ui-accordion > :where([data-ui]) > :where([data-ui]){
+  width:inherit;}
+
+ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]{
+  padding-inline:var(--ui-accordion-padding-inline);
+  padding-block:var(--ui-accordion-title-padding-block);
+  font-size:var(--ui-accordion-title-font-size);
+  color:var(--ui-accordion-title-font-color);
   outline-offset:2px;
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
-  cursor:pointer;}
+  cursor:pointer;
+  background-color:var(--ui-accordion-title-background-color);}
 
-ui-button[ui]{
+ui-accordion[ui] > :where([data-ui]) > [data-ui="accordion-title"]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,outline-color,color;}
 
-ui-button:focus-visible:not([disabled]){
-  outline-color:var(--ui-button-outline-color);}
+ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:focus-visible{
+  outline-color:var(--ui-accordion-outline-color);}
 
-ui-button > ui-icon{
-  height:var(--ui-button-icon-size);
-  width:var(--ui-button-icon-size);}
 
-ui-button > ui-icon:not(:only-child):first-child{
-  margin-inline-start:-2px;}
-
-ui-button > ui-icon:not(:only-child):last-child{
-  margin-inline-end:-2px;}
-
-ui-button:has(> ui-icon:only-child){
-  padding:0;
-  aspect-ratio:1;}
-
-ui-button:has(> ui-icon:only-child) > ui-icon{
-  transform:translateX(0.2px);}
-
-ui-button > ui-spinner{
-  position:absolute;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius:inherit;
-  inset:0;
-  background-color:var(--ui-button-background-color-active);}
-
-ui-button > ui-spinner > svg{
-  height:var(--ui-button-loader-icon-size);
-  width:var(--ui-button-loader-icon-size);}
 
 @media (hover:hover){
-  ui-button:hover:not([disabled]):not([loading]){
-    background-color:var(--ui-button-background-color-hover);
-    color:var(--ui-button-font-color-hover);}
+  ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:hover{
+    background-color:var(--ui-accordion-title-background-color-hover);
+    color:var(--ui-accordion-font-color-hover);}
 }
 
-ui-button:active:not([disabled]):not([loading]){
-  background-color:var(--ui-button-background-color-active);}
+ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:active{
+  background-color:var(--ui-accordion-title-background-color-active);}
 
-/* width-mode */
-ui-button[width-mode="full"]{
-  width:100%;}
+
+
+
+
+
+ui-accordion > :where([data-ui]) > [data-ui="accordion-content"]{
+  font-size:var(--ui-accordion-content-font-size);
+  color:var(--ui-accordion-content-font-color);
+  padding-inline:var(--ui-accordion-padding-inline);
+  padding-block:var(--ui-accordion-content-padding-block);
+  line-height:var(--ui-line-height-150);
+
+  background-color:var(--ui-accordion-content-background-color);
+}
+
 
 /* color */
-ui-button[color="default"]{
-  --ui-button-background-color:var(--ui-color-gray-800);
-  --ui-button-background-color-hover:var(--ui-color-gray-750);
-  --ui-button-background-color-active:var(--ui-color-gray-700);
-  --ui-button-loader-background-color:var(--ui-color-gray-800);
-  --ui-button-font-color:var(--ui-color-gray-150);
-  --ui-button-font-color-hover:var(--ui-color-white);
-  --ui-button-outline-color:var(--ui-color-gray-500);}
+ui-accordion[color="default"]{
+  --ui-accordion-title-background-color:var(--ui-color-gray-800);
+  --ui-accordion-title-background-color-hover:var(--ui-color-gray-750);
+  --ui-accordion-title-background-color-active:var(--ui-color-gray-700);
+  --ui-accordion-content-background-color:var(--ui-color-gray-850);
+  --ui-accordion-title-font-color:var(--ui-color-white);
+  --ui-accordion-content-font-color:var(--ui-color-gray-200);
+
+  --ui-accordion-outline-color:var(--ui-color-gray-500);}
 
 /* size */
-ui-button[size="default"]{
-  --ui-button-font-size:14px;
-  --ui-button-height:32px;
-  --ui-button-padding-inline:16px;
-  --ui-button-column-gap:8px;
-  --ui-button-icon-size:16px;
-  --ui-button-loader-icon-size:20px;}
+ui-accordion[size="default"]{
+  --ui-accordion-title-font-size:16px;
+  --ui-accordion-content-font-size:14px;
+  --ui-accordion-row-gap:10px;
+  --ui-accordion-padding-inline:14px;
+  --ui-accordion-title-padding-block:16px;
+  --ui-accordion-content-padding-block:12px;}
