--- a/ui/ui-accordion/ui-accordion.css
+++ b/ui/ui-accordion/ui-accordion.css
@@ -1,74 +1,91 @@
 ui-accordion{
-  position:relative;
   display:flex;
   flex-direction:column;
   width:100%;
   row-gap:var(--ui-accordion-row-gap);}
 
-ui-accordion > :where([data-ui]),
-ui-accordion > :where([data-ui]) > :where([data-ui]){
+ui-accordion [data-ui="accordion-item"]{
   width:inherit;}
 
-ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]{
+ui-accordion [data-ui="accordion-header"]{
+  display:flex;
+  width:inherit;
   padding-inline:var(--ui-accordion-padding-inline);
-  padding-block:var(--ui-accordion-title-padding-block);
-  font-size:var(--ui-accordion-title-font-size);
-  color:var(--ui-accordion-title-font-color);
+  font-size:var(--ui-accordion-header-font-size);
+  color:var(--ui-accordion-header-font-color);
   outline-offset:2px;
   outline-width:2px;
   outline-style:solid;
   outline-color:transparent;
   cursor:pointer;
-  background-color:var(--ui-accordion-title-background-color);}
+  background-color:var(--ui-accordion-header-background-color);}
 
-ui-accordion[ui] > :where([data-ui]) > [data-ui="accordion-title"]{
+ui-accordion [data-ui="accordion-header"]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,outline-color,color;}
 
-ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:focus-visible{
+ui-accordion [data-ui="accordion-header"]:focus-visible{
   outline-color:var(--ui-accordion-outline-color);}
 
-
-
 @media (hover:hover){
-  ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:hover{
-    background-color:var(--ui-accordion-title-background-color-hover);
+  ui-accordion [data-ui="accordion-header"]:hover{
+    background-color:var(--ui-accordion-header-background-color-hover);
     color:var(--ui-accordion-font-color-hover);}
 }
 
-ui-accordion > :where([data-ui]) > [data-ui="accordion-title"]:active{
-  background-color:var(--ui-accordion-title-background-color-active);}
+ui-accordion [data-ui="accordion-header"][aria-expanded="true"],
+ui-accordion [data-ui="accordion-header"]:active{
+  background-color:var(--ui-accordion-header-background-color-active);}
 
-
-
-
-
-
-ui-accordion > :where([data-ui]) > [data-ui="accordion-content"]{
-  font-size:var(--ui-accordion-content-font-size);
-  color:var(--ui-accordion-content-font-color);
-  padding-inline:var(--ui-accordion-padding-inline);
-  padding-block:var(--ui-accordion-content-padding-block);
+ui-accordion [data-ui="accordion-header-text"]{
   line-height:var(--ui-line-height-150);
-  background-color:var(--ui-accordion-content-background-color);
+  padding-block:var(--ui-accordion-header-padding-block);
+  flex-grow:1;}
+
+ui-accordion [data-ui="accordion-header-icon"]{
+  display:flex;
+  align-items:center;}
+
+ui-accordion [data-ui="accordion-body"]{
+  display:none;
+  -webkit-user-select:text;
+  user-select:text;
+  font-size:var(--ui-accordion-body-font-size);
+  color:var(--ui-accordion-body-font-color);
+  padding-inline:var(--ui-accordion-padding-inline);
+  padding-block:var(--ui-accordion-body-padding-block);
+  line-height:var(--ui-line-height-150);
+  background-color:var(--ui-accordion-body-background-color);}
+
+ui-accordion [data-ui="accordion-header"][aria-expanded="true"] + [data-ui="accordion-body"]{
+  display:block;}
+
+
+ui-accordion [data-ui="accordion-header"] ui-icon{
+  transition-duration:var(--ui-transition-duration);
+  transition-property:transform;
 }
 
+ui-accordion [data-ui="accordion-header"][aria-expanded="true"] ui-icon {
+  transform:rotate(180deg);
+}
 
 /* color */
 ui-accordion[color="default"]{
-  --ui-accordion-title-background-color:var(--ui-color-gray-800);
-  --ui-accordion-title-background-color-hover:var(--ui-color-gray-750);
-  --ui-accordion-title-background-color-active:var(--ui-color-gray-700);
-  --ui-accordion-content-background-color:var(--ui-color-gray-850);
-  --ui-accordion-title-font-color:var(--ui-color-white);
-  --ui-accordion-content-font-color:var(--ui-color-gray-200);
+  --ui-accordion-header-background-color:var(--ui-color-gray-800);
+  --ui-accordion-header-background-color-hover:var(--ui-color-gray-750);
+  --ui-accordion-header-background-color-active:var(--ui-color-gray-700);
+  --ui-accordion-body-background-color:var(--ui-color-gray-850);
+  --ui-accordion-header-font-color:var(--ui-color-white);
+  --ui-accordion-body-font-color:var(--ui-color-gray-200);
   --ui-accordion-outline-color:var(--ui-color-gray-500);}
 
 /* size */
 ui-accordion[size="default"]{
-  --ui-accordion-title-font-size:16px;
-  --ui-accordion-content-font-size:14px;
+  --ui-accordion-header-font-size:18px;
+  --ui-accordion-body-font-size:16px;
   --ui-accordion-row-gap:10px;
   --ui-accordion-padding-inline:14px;
-  --ui-accordion-title-padding-block:16px;
-  --ui-accordion-content-padding-block:12px;}
+  --ui-accordion-header-padding-block:16px;
+  --ui-accordion-body-padding-block:12px;
+  --ui-accordion-icon-size:16px;}
