--- a/ui/ui-accordion/ui-accordion.css
+++ b/ui/ui-accordion/ui-accordion.css
@@ -5,32 +5,28 @@ ui-accordion{
   row-gap:var(--ui-accordion-row-gap);}
 
 ui-accordion [data-ui="accordion-item"]{
-  width:inherit;}
+  border-radius:inherit;
+  overflow:hidden;}
 
 ui-accordion [data-ui="accordion-header"]{
   display:flex;
-  width:inherit;
-  padding-inline:var(--ui-accordion-padding-inline);
+  padding-inline:var(--ui-accordion-header-padding-inline);
   font-size:var(--ui-accordion-header-font-size);
+  background-color:var(--ui-accordion-header-background-color);
   color:var(--ui-accordion-header-font-color);
-  outline-offset:2px;
-  outline-width:2px;
-  outline-style:solid;
+  outline-offset:var(--ui-outline-offset);
+  outline-width:var(--ui-outline-width);
+  outline-style:var(--ui-outline-style);
   outline-color:transparent;
-  cursor:pointer;
-  background-color:var(--ui-accordion-header-background-color);}
-
-ui-accordion [data-ui="accordion-header"]{
   transition-duration:var(--ui-transition-duration);
   transition-property:background-color,outline-color,color;}
 
 ui-accordion [data-ui="accordion-header"]:focus-visible{
-  outline-color:var(--ui-accordion-outline-color);}
+  outline-color:var(--ui-outline-color);}
 
 @media (hover:hover){
   ui-accordion [data-ui="accordion-header"]:hover{
-    background-color:var(--ui-accordion-header-background-color-hover);
-    color:var(--ui-accordion-font-color-hover);}
+    background-color:var(--ui-accordion-header-background-color-hover);}
 }
 
 ui-accordion [data-ui="accordion-header"][aria-expanded="true"],
@@ -52,7 +48,7 @@ ui-accordion [data-ui="accordion-body"]{
   user-select:text;
   font-size:var(--ui-accordion-body-font-size);
   color:var(--ui-accordion-body-font-color);
-  padding-inline:var(--ui-accordion-padding-inline);
+  padding-inline:var(--ui-accordion-body-padding-inline);
   padding-block:var(--ui-accordion-body-padding-block);
   line-height:var(--ui-line-height-150);
   background-color:var(--ui-accordion-body-background-color);}
@@ -60,15 +56,14 @@ ui-accordion [data-ui="accordion-body"]{
 ui-accordion [data-ui="accordion-header"][aria-expanded="true"] + [data-ui="accordion-body"]{
   display:block;}
 
-
 ui-accordion [data-ui="accordion-header"] ui-icon{
+  width:var(--ui-accordion-icon-expand-size);
+  height:var(--ui-accordion-icon-expand-size);
   transition-duration:var(--ui-transition-duration);
-  transition-property:transform;
-}
+  transition-property:transform;}
 
-ui-accordion [data-ui="accordion-header"][aria-expanded="true"] ui-icon {
-  transform:rotate(180deg);
-}
+ui-accordion [data-ui="accordion-header"][aria-expanded="true"] ui-icon{
+  transform:rotate(180deg);}
 
 /* color */
 ui-accordion[color="default"]{
@@ -77,15 +72,15 @@ ui-accordion[color="default"]{
   --ui-accordion-header-background-color-active:var(--ui-color-gray-700);
   --ui-accordion-body-background-color:var(--ui-color-gray-850);
   --ui-accordion-header-font-color:var(--ui-color-white);
-  --ui-accordion-body-font-color:var(--ui-color-gray-200);
-  --ui-accordion-outline-color:var(--ui-color-gray-500);}
+  --ui-accordion-body-font-color:var(--ui-color-gray-200);}
 
 /* size */
 ui-accordion[size="default"]{
   --ui-accordion-header-font-size:18px;
   --ui-accordion-body-font-size:16px;
   --ui-accordion-row-gap:10px;
-  --ui-accordion-padding-inline:14px;
+  --ui-accordion-header-padding-inline:20px 12px;
+  --ui-accordion-body-padding-inline:20px;
   --ui-accordion-header-padding-block:16px;
   --ui-accordion-body-padding-block:12px;
-  --ui-accordion-icon-size:16px;}
+  --ui-accordion-icon-expand-size:24px;}
