--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -129,6 +129,12 @@
 
   /* transition */
   --ui-transition-duration:0.15s;
+
+  /* outline */
+  --ui-outline-offset:2px;
+  --ui-outline-width:2px;
+  --ui-outline-style:solid;
+  --ui-outline-color:var(--ui-color-gray-500);
 }
 
 [ui]{
@@ -154,7 +160,8 @@
 [ui][disabled] *{
   pointer-events:none;}
 
-[ui][loading]{cursor:default;}
+[ui][loading]{
+  cursor:default;}
 
 [ui] svg{
   display:block;
@@ -162,6 +169,14 @@
   /*stroke:currentColor;*/
   pointer-events:none;
   shape-rendering:geometricPrecision;}
+
+[role="button"],
+[role="switch"],
+[role="checkbox"],
+[role="combobox"],
+[role="option"]{
+  cursor:pointer;
+  touch-action:manipulation;}
 
 /* border radius */
 [ui][shape="rounded"]{border-radius:var(--ui-border-radius-rounded);}
