--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -178,6 +178,17 @@
   cursor:pointer;
   touch-action:manipulation;}
 
+button{
+  appearance:none;
+  font:inherit;
+  color:inherit;
+  background:none;
+  border:0;
+  padding:0;
+  margin:0;
+  cursor:pointer;
+  touch-action:manipulation;}
+
 /* border radius */
 [ui][shape="rounded"]{border-radius:var(--ui-border-radius-rounded);}
 [ui][shape="square"]{border-radius:var(--ui-border-radius-square);}
