--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -12,6 +12,7 @@
 @import './ui-select/ui-select.css';
 @import './ui-spinner/ui-spinner.css';
 @import './ui-switch/ui-switch.css';
+@import './ui-tabs/ui-tabs.css';
 @import './ui-text/ui-text.css';
 @import './ui-textarea/ui-textarea.css';
 
