--- a/ui/ui-accordion/ui-accordion.css
+++ b/ui/ui-accordion/ui-accordion.css
@@ -31,7 +31,7 @@ ui-accordion [data-ui="accordion-header"]:focus-visible{
 }
 
 ui-accordion [data-ui="accordion-header"][aria-expanded="true"],
-ui-accordion [data-ui="accordion-header"]:active{
+ui-accordion [data-ui="accordion-header"]:not([disabled]):active{
   background-color:var(--ui-accordion-header-background-color-active);}
 
 ui-accordion [data-ui="accordion-header-text"]{
